--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "anime.css": "^1.0.1",
+    "firebase": "^10.9.0",
     "gsap-trial": "^3.12.5",
     "leaflet": "^1.7.1",
     "loaders.css": "^0.1.2",
