--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.163.0",
     "animate.css": "^4.1.1",
     "anime.css": "^1.0.1",
     "firebase": "^10.9.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
+    "three": "^0.163.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
