--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
+    "tagcloud": "^1.1.0-1",
+    "TagCloud": "^2.5.0",
     "three": "^0.163.0",
     "web-vitals": "^2.1.4"
   },
