--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap-trial": "^3.12.5",
     "leaflet": "^1.7.1",
     "loaders.css": "^0.1.2",
+    "postprocessing": "^6.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
