--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "sass": "^1.72.0",
     "tagcloud": "^1.1.0-1",
     "TagCloud": "^2.5.0",
